fixes image overflow in header

--- a/react-app/src/components/SplashPage/NavBar/NavBar.css
+++ b/react-app/src/components/SplashPage/NavBar/NavBar.css
@@ -10,6 +10,8 @@ nav {
   background-color: white;
 
   box-shadow: 0 0 20px 5px rgba(120, 120, 120, .1);
+
+  overflow: hidden;
 }
 
 .navbar__left {
